Przygotowanie pod poprawne sterowanie grą.

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
     <div id="resoult">
 
     </div>
+    <div id="wait">
+        <div class="handler"><img src="/img/blocks.gif" alt="#"></div>
+    </div>
     <select name="ala" id="ala">
         <option value="f">FRONT</option>
         <option value="b">BACK</option>
