Ruchy online full

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
         <option value="s">SIDE</option>
         <option value="t">TOP</option>
     </select>
+    <div id="information"></div>
     <div id="root"></div>
 </body>
 </html>
